--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,3 +19,4 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -Dmaven.test.skip=true -B package --file pom.xml
+        run: mvn -Dmaven.test.skip=true -B package --file pom.xml
