--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,13 +10,12 @@ jobs:
 
     steps:
       - name: Télechargement des sources
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: "17"
           distribution: "temurin"
           cache: maven
       - name: Build with Maven
-        run: mvn -Dmaven.test.skip=true -B package --file pom.xml
-        run: mvn -Dmaven.test.skip=true -B package --file pom.xml
+        run: mvn -B package --file pom.xml
