--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,12 +6,13 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Télechargement des sources
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+       - name: Télechargement des sources
+        uses: actions/checkout@v4
+       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: "17"
