--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,16 +3,16 @@ name: Java CI with Maven
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-       - name: Télechargement des sources
-        uses: actions/checkout@v4
-       - name: Set up JDK 17
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: "17"
