--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 
-#server.port=5000
+erver.port=5000
 
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
