--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=njanguipro
 spring.datasource.url=jdbc:mysql://phoenixdb.cf0sc2guglup.eu-west-3.rds.amazonaws.com:3306/njanguipro
+#spring.datasource.url=jdbc:mysql://localhost:3306/njangui_pro
 spring.datasource.username=root
+#spring.datasource.password=
 spring.datasource.password=phoenix2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
